addeded header + nav section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
 .bz-exm{
-    background-color: #264653;
+    background-color: #264653 !important;
+}
+.login-btn{
+    background-color: #E76F51;;
 }
