--- a/style.css
+++ b/style.css
@@ -3,4 +3,13 @@
 }
 .login-btn{
     background-color: #E76F51;;
+}.footer{
+    background-color: #0B0D17;
+    height: 350px;
+}.footer-content{
+    position: relative;
+    left: 10%;
+
+} .unorderliststyle{
+    padding-left: 10px;
 }
